--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
       <span id="minutes">25</span>:<span id="seconds">00</span>
     </div>
 
+    <div class = "task-section">
+      <input type = "text" id = "taskInput " placeholder = "Add a new task..." />
+      <button id="addTaskBtn">Add Task</button>
+      <ul id="taskList"></ul>
+    
+    </div>
+
     <div class="controls">
       <button id="startBtn">Start</button>
       <button id="pauseBtn">Pause</button>
