--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <div class="timer">
       <span id="minutes">25</span>:<span id="seconds">00</span>
     </div>
+    
+    <div class="progress-bar-container">
+  <div class="progress-bar" id="progressBar"></div>
+</div>
 
     <div class = "task-section">
       <input type = "text" id = "taskInput " placeholder = "Add a new task..." />
